--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
       --radius-sm:999px;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;background:var(--bg);height:100%;max-width:460px;max-height:800px;width:100%;display:flex;align-items:center;justify-content:center;padding:16px 12px;font-family:"Inter",system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text-primary);overflow:hidden;margin-left:auto;margin-right:auto}
-    #_app{width:100%;max-width:100%;background:var(--card-bg);padding:18px 24px;border-radius:var(--radius-lg);box-shadow:var(--shadow);border:1px solid rgba(255,255,255,.7);display:flex;flex-direction:column;gap:16px;height:100%;max-height:100%;min-height:0;overflow:hidden}
+    html,body{height:100%;width:100%}
+    body{margin:0;background:var(--bg);max-width:400px;max-height:800px;width:100%;height:100%;display:flex;align-items:center;justify-content:center;padding:16px 12px;font-family:"Inter",system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text-primary);overflow:hidden;margin-left:auto;margin-right:auto}
+    #_app{width:100%;max-width:100%;background:var(--card-bg);padding:20px 22px;border-radius:var(--radius-lg);box-shadow:var(--shadow);border:1px solid rgba(255,255,255,.7);display:flex;flex-direction:column;gap:16px;height:100%;max-height:100%;min-height:0;overflow:hidden}
+    ._ttl{margin:0;font-size:22px;font-weight:800;letter-spacing:.01em;color:var(--accent-strong)}
+    ._sub{margin:0;color:var(--text-muted);font-size:14px;line-height:1.5}
     ._legend{display:flex;align-items:center;gap:12px;margin:0;flex-shrink:0;background:linear-gradient(135deg,#f1f4ff,#fbfdff);border:1px solid var(--border);padding:10px 14px;border-radius:16px;color:var(--text-muted);box-shadow:0 4px 10px rgba(31,62,125,.08)}
     ._legend ._poor, ._legend ._excel{font-weight:700}
     ._legend ._poor{color:#d6455d}
     ._legend ._excel{margin-left:auto;font-weight:700;color:#228f76}
-    ._legend svg{flex:1;min-width:140px;height:12px}
+    ._legend svg{flex:1;min-width:120px;height:12px}
 
     ._bars{display:flex;flex-direction:column;gap:12px;overflow:auto;padding-right:6px;margin-right:-6px;flex:1;min-height:0}
     ._row{display:grid;grid-template-columns:minmax(0,1.25fr) minmax(0,2.5fr) minmax(96px,1fr);gap:14px;align-items:center;padding:12px 14px;border-radius:16px;transition:transform .2s ease,box-shadow .2s ease;background:#f9faff;border:1px solid transparent}
@@ -54,7 +56,7 @@
     ._rng:focus::-webkit-slider-thumb,._rng:hover::-webkit-slider-thumb{transform:scale(1.15);box-shadow:0 0 0 5px rgba(52,84,209,.25)}
     ._rng:focus::-moz-range-thumb,._rng:hover::-moz-range-thumb{transform:scale(1.15);box-shadow:0 0 0 5px rgba(52,84,209,.25)}
 
-    @media (max-width:460px){
+    @media (max-width:420px){
       body{padding:12px 10px}
       #_app{padding:18px 18px;gap:12px}
       ._legend{margin-bottom:12px}
@@ -68,6 +70,8 @@
 </head>
 <body>
 <div class="_w" id="_app">
+  <h1 class="_ttl">JESSE'S PATIENT EXPERIENCE</h1>
+  <p class="_sub">Interactive summary of how Jesse rated key areas of their recent visit. Drag the sliders to experiment with improved touchpoints and instantly see the weighted average update.</p>
   <div class="_legend">
     <span class="_poor">Poor</span>
     <svg viewBox="0 0 100 10" aria-hidden="true">
